# AWS

./: .gitignore  README.md
ec2-ssh/: .gitignore  README.md  cdk.json  package-lock.json  package.json
ec2-ssh/lib/: ec2-ssh-stack.ts
ec2-ssh/test/: ec2-ssh.test.ts
projectHub/: .gitignore  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
projectHub/ansible/: .gitignore  README.md  ansible.cfg
projectHub/ansible/inventory/: project_hub.aws_ec2.yml
projectHub/ansible/playbooks/: build_deploy.yml  deploy_website.yml  make_docs.yml  make_java_docs.yml  make_python_docs.yml  prepare_instance.yml  provision.yml
projectHub/app/: .gitignore  package-lock.json  package.json  tailwind.config.ts  test-s3-access.sh
projectHub/app/backend/: README.md  ecosystem.config.js  package-lock.json  package.json  tsconfig.json
projectHub/app/resources/: .gitignore  README.md
projectHub/app/resources/samplePython/: README.md  pyproject.toml
projectHub/assets/s3-api/: README.md  pyproject.toml
projectHub/assets/s3-api/scripts/: rebuild_run.sh
projectHub/assets/web/: docusaurus.config.ts  (+2 more)
projectHub/cdk/: .gitignore  README.md  package-lock.json  package.json
projectHub/lib/: data-model.ts  data-processing-stack.ts  ec2-stack.ts  network-stack.ts  security-stack.ts
projectHub/resource/: projectHub.drawio
projectHub/test/: app-project-hub.test.ts  s3-parser.test.ts
s3-reader/: .gitignore  README.md  cdk.json  package-lock.json  package.json
s3-reader/lib/: app-microservices-stack.ts  data-processing-stack.ts  s3-parser-stack.ts  s3-stack.ts
(+59 files in other folders)
