[tool.poetry]
name = "samplePython"
version = "0.1.0"
description = ""
authors = ["plozovik <plozovikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"


[tool.poetry.group.dev.dependencies]
pdoc = "^15.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
